@@ -1,11 +1,12 @@
 #include "common_options.txt"
 .TH PSLEGEND 1 MANDATE GMT_STRING "Generic Mapping Tools"
 #define CLEARANCE 4BD(p)/4BD(p)
+#define RADIUS 6BD(p)
 .SH NAME
 pslegend \- To plot a map legend
 .SH SYNOPSIS
 BD(pslegend) [ IT(textfile) ] OPT(D)[BD(x)]IT(lon)/IT(lat)/IT(width)/IT(height)/IT(just)[/IT(dx)/IT(dy)] 
-[ GMT_B_OPT ] [ OPT(C)IT(dx)/IT(dy) ] [ OPT(F) ] [ OPT(G)IT(fill) ] [ GMT_J_OPT ] 
+[ GMT_B_OPT ] [ OPT(C)IT(dx)/IT(dy) ] [ OPT(F)[BD(+r)[IT(radius)]] ] [ OPT(G)IT(fill) ] [ GMT_J_OPT ] 
 [ GMT_K_OPT ] [ OPT(L)IT(spacing) ] [ GMT_O_OPT ] [ GMT_P_OPT ] 
 [ GMT_Rgeo_OPT ] [ GMT_U_OPT ] [ GMT_V_OPT ] [ GMT_X_OPT ] [ GMT_Y_OPT ] 
 [ GMT_c_OPT ] [ GMT_p_OPT ] [ GMT_t_OPT ]
@@ -116,8 +117,10 @@ in the direction implied by the justification.
 OPT(C)IT(dx)/IT(dy)
 Sets the clearance between the legend frame and the internal items [CLEARANCE].
 .TP
-OPT(F)
-Draws a border around the legend using BD(MAP_FRAME_PEN).
+OPT(F)[BD(+r)[IT(radius)]]
+Draws a rectangular border around the legend using BD(MAP_FRAME_PEN).  Append BD(+r) to get a
+rounded rectangular border, with a RADIUS corner radius.  You can override this radius by
+appending another value.
 .TP
 OPT(G)IT(fill)
 Select fill shade, color or pattern of the legend box [Default is no fill].
